# implied-bounds.rs

./: Cargo.toml  README.md
src/: _lib.rs  compile_fail_tests.md  helper_trait.rs
src/proc_macros/: Cargo.toml  _mod.rs  args.rs  utils.rs
tests/: basic.rs  iter.rs  krate.rs  look_ma_no_macros.rs
