# Templated by `cargo-generate` using https://github.com/danielhenrymantilla/proc-macro-template
[lib]
path = "src/_lib.rs"

[package]
name = "implied-bounds"
authors = [
    "Daniel Henry-Mantilla <daniel.henry.mantilla@gmail.com>",
]
version = "0.1.0-rc2"  # Keep in sync
edition = "2021"
rust-version = "1.79.0"

license = "Zlib OR MIT OR Apache-2.0"
repository = "https://github.com/danielhenrymantilla/implied-bounds.rs"
documentation = "https://docs.rs/implied-bounds"
readme = "README.md"

description = "Make all the bounds of a trait definition be implied through a helper trait and macro attribute."
keywords = ["trait", "implied", "entailed", "bounds", "imply"]

[features]
default = [
    "proc-macros",
]

proc-macros = [
    "dep:implied-bounds-proc_macros"
]

# unstable! Will probably use nightly to improve doc quality
better-docs = []

ui-tests = [
    "better-docs",
]

# `docs-rs` is very similar to `better-docs`, but for it being allowed to enable
# other features as well, often to make sure optional/non-`default` features
# make it to the rendered docs (using `--all-features` instead is not that great).
docs-rs = [
    "better-docs",
]

[dependencies]

[dependencies.implied-bounds-proc_macros]
optional = true
path = "src/proc_macros"
version = "=0.1.0-rc2"  # Keep in sync

[dev-dependencies]

[workspace]
members = [
    "src/proc_macros",
]

[package.metadata.docs.rs]
features = [
    "docs-rs",
]
rustdoc-args = [
    # Use (with or without `open`):
    # ```md
    # <details open class="custom"><summary><span class="summary-box"><span>Click to hide</span></span></summary>
    # …
    # </details>
    # ```
    # to get nice drop-down menus (and avoid the css bug with rustdoc).
    "--html-before-content", "fix-docsrs-li-details-summary.html",
]
