# Templated by `cargo-generate` using https://github.com/danielhenrymantilla/proc-macro-template
[lib]
proc-macro = true
path = "_mod.rs"

[package]
name = "implied-bounds-proc_macros"
authors = [
    "Daniel Henry-Mantilla <daniel.henry.mantilla@gmail.com>"
]
version = "0.1.0-rc4"  # Keep in sync
edition = "2021"
rust-version = "1.79.0"

license = "Zlib OR MIT OR Apache-2.0"
repository = "https://github.com/danielhenrymantilla/implied-bounds.rs"
documentation = "https://docs.rs/implied-bounds"

description = "Internal: proc-macro backend of ::implied_bounds."

[dependencies]
proc-macro2.version = "1.0.0"
quote.version = "1.0.0"
syn.version = "2.0.0"
syn.features = [
    "full",
]
